--- a/.env
+++ b/.env
@@ -10,12 +10,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=lp3itasik_database
-DB_USERNAME=root
-DB_PASSWORD=root
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=lp3itasik_database
+# DB_USERNAME=root
+# DB_PASSWORD=root
 
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
@@ -26,12 +26,12 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=help@politekniklp3i-tasikmalaya.ac.id
 MAIL_FROM_NAME="${APP_NAME}"
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=lp3itasik_database
-# DB_USERNAME=lp3itasik_marketing
-# DB_PASSWORD=0265juanda311766
+DB_CONNECTION=mysql
+DB_HOST=andria-db.id.domainesia.com
+DB_PORT=3306
+DB_DATABASE=amisbud1_pmb
+DB_USERNAME=amisbud1_pmb
+DB_PASSWORD=pmbonline123
 
 # MAIL_MAILER=smtp
 # MAIL_HOST=mail.politekniklp3i-tasikmalaya.ac.id
